fix(build): wrong paths

--- a/.github/workflows/wtBuild.yml
+++ b/.github/workflows/wtBuild.yml
@@ -1,18 +1,25 @@
 name: Build Windows Terminal
 on: [push, pull_request]
+
 jobs:
   build:
     runs-on: windows-latest
     steps:
-    - uses: actions/checkout@v4
-    - name: Setup MSVC
-      uses: microsoft/setup-msbuild@v2
-    - name: Build
-      shell: cmd
-      run: |
-        tools\devcmds\build.cmd -p x64 -c Release
-    - name: Upload Terminal.exe
-      uses: actions/upload-artifact@v4
-      with:
-        name: Terminal-Release
-        path: out/x64-Release/Terminal.exe
+      - uses: actions/checkout@v4
+
+      - name: Setup MSBuild
+        uses: microsoft/setup-msbuild@v2
+
+      - name: Run razzle (environment setup)
+        shell: cmd
+        run: .\tools\razzle.cmd
+
+      - name: Build Terminal in Release x64
+        shell: cmd
+        run: .\tools\bcz.cmd rel
+
+      - name: Upload Terminal.exe artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: Terminal-Release
+          path: out\x64-Release\Terminal.exe
