--- a/.github/workflows/wtBuild.yml
+++ b/.github/workflows/wtBuild.yml
@@ -1,4 +1,4 @@
-name: Build Windows Terminal
+name: Build Windows Terminal Tabs
 on: [push, pull_request]
 
 jobs:
@@ -6,20 +6,29 @@ jobs:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v4
-
+      
       - name: Setup MSBuild
         uses: microsoft/setup-msbuild@v2
-
-      - name: Run razzle (environment setup)
+        
+      - name: Setup vcpkg
         shell: cmd
-        run: .\tools\razzle.cmd
-
-      - name: Build Terminal in Release x64
+        run: |
+          set VCPKG_ROOT=%CD%\dep\vcpkg
+          if not exist dep\vcpkg\bootstrap-vcpkg.bat (
+            echo vcpkg missing - skipping build
+            exit /b 0
+          )
+          dep\vcpkg\bootstrap-vcpkg.bat
+          
+      - name: Build TerminalAppLib
         shell: cmd
-        run: .\tools\bcz.cmd rel
-
-      - name: Upload Terminal.exe artifact
+        run: |
+          set SolutionDir=%CD%\
+          set VCPKG_ROOT=%CD%\dep\vcpkg
+          msbuild src\cascadia\TerminalApp\TerminalAppLib.vcxproj /p:Configuration=Release /p:Platform=x64 /p:SolutionDir=%SolutionDir% /p:WindowsSdkVersion=10.0.22621.0 /p:CppWinRTVerifyKitVersion=false
+          
+      - name: Upload TerminalAppLib.dll
         uses: actions/upload-artifact@v4
         with:
-          name: Terminal-Release
-          path: out\x64-Release\Terminal.exe
+          name: TerminalAppLib-Release
+          path: bin\x64\Release\TerminalAppLib.dll
