--- a/.github/workflows/wtBuild.yml
+++ b/.github/workflows/wtBuild.yml
@@ -25,13 +25,13 @@ jobs:
           cd dep\vcpkg
           .\bootstrap-vcpkg.bat
           cd ..\..
-          
+
       - name: Build TerminalAppLib
         shell: cmd
         run: |
           set SolutionDir=%CD%\
           set VCPKG_ROOT=%CD%\dep\vcpkg
-          msbuild src\cascadia\TerminalApp\TerminalAppLib.vcxproj /p:Configuration=Release /p:Platform=x64 /p:SolutionDir=%SolutionDir% /p:WindowsSdkVersion=10.0.22621.0 /p:CppWinRTVerifyKitVersion=false
+          msbuild src\cascadia\TerminalApp\TerminalAppLib.vcxproj /p:Configuration=Release /p:Platform=x64 /p:SolutionDir=%SolutionDir% /p:CppWinRTVerifyKitVersion=false
           
       - name: Upload tabs DLL
         uses: actions/upload-artifact@v4
