--- a/.github/workflows/wtBuild.yml
+++ b/.github/workflows/wtBuild.yml
@@ -26,11 +26,17 @@ jobs:
           .\bootstrap-vcpkg.bat
           cd ..\..
 
+      - name: Restore NuGet Packages
+        shell: cmd
+        run: nuget restore src\cascadia\TerminalApp\TerminalAppLib.sln
+
       - name: Build TerminalAppLib
         shell: cmd
         run: |
           set SolutionDir=%CD%\
           set VCPKG_ROOT=%CD%\dep\vcpkg
+          for /f "delims=" %%i in ('dir "%ProgramFiles%\Microsoft SDKs\Windows\v10.*" /b /ad /on 2^>nul ^| tail -1') do set "SDKVER=%%i"
+          echo Using SDK: %SDKVER%
           msbuild src\cascadia\TerminalApp\TerminalAppLib.vcxproj /p:Configuration=Release /p:Platform=x64 /p:SolutionDir=%SolutionDir% /p:CppWinRTVerifyKitVersion=false /p:WindowsTargetPlatformVersion=%SDKVER% /p:WindowsSdkVersion=%SDKVER%
           
       - name: Upload tabs DLL
