--- a/.github/workflows/wtBuild.yml
+++ b/.github/workflows/wtBuild.yml
@@ -31,7 +31,7 @@ jobs:
         run: |
           set SolutionDir=%CD%\
           set VCPKG_ROOT=%CD%\dep\vcpkg
-          nuget restore src\cascadia\TerminalApp\TerminalAppLib.vcxproj
+          nuget restore .
           for /f "delims=" %%i in ('dir "%ProgramFiles%\Microsoft SDKs\Windows\v10.*" /b /ad /on 2^>nul ^| tail -1') do set "SDKVER=%%i"
           echo Using SDK: %SDKVER%
           msbuild src\cascadia\TerminalApp\TerminalAppLib.vcxproj /p:Configuration=Release /p:Platform=x64 /p:SolutionDir=%SolutionDir% /p:CppWinRTVerifyKitVersion=false /p:WindowsTargetPlatformVersion=%SDKVER% /p:WindowsSdkVersion=%SDKVER% /p:RestorePackages=true /t:Restore,Build
