--- a/.github/workflows/wtBuild.yml
+++ b/.github/workflows/wtBuild.yml
@@ -45,7 +45,17 @@ jobs:
           xcopy /E /I /Y packages\ src\packages\
           for /f "delims=" %%i in ('dir "%ProgramFiles%\Microsoft SDKs\Windows\v10.*" /b /ad /on 2^>nul ^| tail -1') do set "SDKVER=%%i"
           echo Using SDK: %SDKVER%
-          msbuild src\cascadia\TerminalApp\TerminalAppLib.vcxproj /p:Configuration=Release /p:Platform=x64 /p:SolutionDir=%SolutionDir% /p:CppWinRTVerifyKitVersion=false /p:WindowsTargetPlatformVersion=%SDKVER% /p:WindowsSdkVersion=%SDKVER% /p:RestorePackages=true /t:Restore,Build
+          set WindowsSdkDir=%ProgramFiles%\Microsoft SDKs\Windows\%SDKVER%
+          set WindowsSDKVersion=%SDKVER%
+          set WindowsTargetPlatformVersion=%SDKVER%
+          msbuild src\cascadia\TerminalApp\TerminalAppLib.vcxproj ^
+            /p:SolutionDir=%SolutionDir% ^
+            /p:WindowsSdkDir="%WindowsSdkDir%" ^
+            /p:WindowsSDKVersion=%SDKVER% ^
+            /p:WindowsTargetPlatformVersion=%SDKVER% ^
+            /p:Configuration=Release ^
+            /p:Platform=x64 ^
+            /t:Restore,Build
           
       - name: Upload tabs DLL
         uses: actions/upload-artifact@v4
