--- a/.github/workflows/wtBuild.yml
+++ b/.github/workflows/wtBuild.yml
@@ -43,6 +43,7 @@ jobs:
           for /f "delims=" %%i in ('dir "%ProgramFiles(x86)%\Windows Kits\10\Include\*" /b /ad /on 2^>nul ^| tail -1') do set "SDKVER=%%i"
           if not defined SDKVER set SDKVER=10.0.26100.0
           echo Using SDK: %SDKVER%
+          set "WindowsSdkDir=%ProgramFiles(x86)%\Windows Kits\10\"
 
       - name: Build TerminalAppLib
         shell: cmd
@@ -56,10 +57,11 @@ jobs:
             /p:SolutionDir=%SolutionDir% ^
             /p:WindowsTargetPlatformVersion=%SDKVER% ^
             /p:WindowsSdkVersion=%SDKVER% ^
+            /p:WindowsSdkDir=%WindowsSdkDir% ^
+            /p:RetargetProjects=true ^
             /p:Configuration=Release ^
             /p:Platform=x64 ^
-            /t:Restore,Build ^
-            /p:RetargetProjects=true
+            /t:Restore,Build
           
       - name: Upload tabs DLL
         uses: actions/upload-artifact@v4
