--- a/.github/workflows/wtBuild.yml
+++ b/.github/workflows/wtBuild.yml
@@ -51,9 +51,14 @@ jobs:
           set VCPKG_ROOT=%CD%\dep\vcpkg
           mkdir src\packages
           xcopy /E /I /Y packages\ src\packages\ >nul
+          msbuild src\cascadia\TerminalConnection\TerminalConnection.vcxproj /p:BuildProjectReferences=true /p:RetargetProjects=true /p:Configuration=Release /p:Platform=x64 /t:Build /nr:false
           msbuild src\cascadia\TerminalCore\TerminalCore.vcxproj /p:BuildProjectReferences=true /p:RetargetProjects=true /p:Configuration=Release /p:Platform=x64 /t:Build /nr:false
-          msbuild src\cascadia\TerminalControl\TerminalControl.vcxproj /p:BuildProjectReferences=true /p:RetargetProjects=true /p:Configuration=Release /p:Platform=x64 /t:Build /nr:false
           msbuild src\cascadia\SettingsModel\SettingsModel.vcxproj /p:BuildProjectReferences=true /p:RetargetProjects=true /p:Configuration=Release /p:Platform=x64 /t:Build /nr:false
+          msbuild src\cascadia\TerminalControl\TerminalControl.vcxproj /p:BuildProjectReferences=true /p:RetargetProjects=true /p:Configuration=Release /p:Platform=x64 /t:Build /nr:false
+          msbuild src\cascadia\TerminalUI\TerminalUI.vcxproj /p:BuildProjectReferences=true /p:RetargetProjects=true /p:Configuration=Release /p:Platform=x64 /t:Build /nr:false
+          msbuild src\cascadia\TerminalUIMarkdown\TerminalUIMarkdown.vcxproj /p:BuildProjectReferences=true /p:RetargetProjects=true /p:Configuration=Release /p:Platform=x64 /t:Build /nr:false
+          msbuild src\cascadia\TerminalSettingsEditor\TerminalSettingsEditor.vcxproj /p:BuildProjectReferences=true /p:RetargetProjects=true /p:Configuration=Release /p:Platform=x64 /t:Build /nr:false
+          msbuild src\cascadia\TerminalSettingsAppAdapterLib\TerminalSettingsAppAdapterLib.vcxproj /p:BuildProjectReferences=true /p:RetargetProjects=true /p:Configuration=Release /p:Platform=x64 /t:Build /nr:false
           msbuild src\cascadia\TerminalApp\TerminalAppLib.vcxproj ^
             /p:BuildProjectReferences=true ^
             /p:RetargetProjects=true ^
