--- a/.github/workflows/wtBuild.yml
+++ b/.github/workflows/wtBuild.yml
@@ -51,14 +51,24 @@ jobs:
           set VCPKG_ROOT=%CD%\dep\vcpkg
           mkdir src\packages
           xcopy /E /I /Y packages\ src\packages\ >nul
-          msbuild src\cascadia\TerminalConnection\TerminalConnection.vcxproj /p:BuildProjectReferences=true /p:RetargetProjects=true /p:Configuration=Release /p:Platform=x64 /t:Build /nr:false
-          msbuild src\cascadia\TerminalCore\TerminalCore.vcxproj /p:BuildProjectReferences=true /p:RetargetProjects=true /p:Configuration=Release /p:Platform=x64 /t:Build /nr:false
-          msbuild src\cascadia\SettingsModel\SettingsModel.vcxproj /p:BuildProjectReferences=true /p:RetargetProjects=true /p:Configuration=Release /p:Platform=x64 /t:Build /nr:false
-          msbuild src\cascadia\TerminalControl\TerminalControl.vcxproj /p:BuildProjectReferences=true /p:RetargetProjects=true /p:Configuration=Release /p:Platform=x64 /t:Build /nr:false
-          msbuild src\cascadia\TerminalUI\TerminalUI.vcxproj /p:BuildProjectReferences=true /p:RetargetProjects=true /p:Configuration=Release /p:Platform=x64 /t:Build /nr:false
-          msbuild src\cascadia\TerminalUIMarkdown\TerminalUIMarkdown.vcxproj /p:BuildProjectReferences=true /p:RetargetProjects=true /p:Configuration=Release /p:Platform=x64 /t:Build /nr:false
-          msbuild src\cascadia\TerminalSettingsEditor\TerminalSettingsEditor.vcxproj /p:BuildProjectReferences=true /p:RetargetProjects=true /p:Configuration=Release /p:Platform=x64 /t:Build /nr:false
-          msbuild src\cascadia\TerminalSettingsAppAdapterLib\TerminalSettingsAppAdapterLib.vcxproj /p:BuildProjectReferences=true /p:RetargetProjects=true /p:Configuration=Release /p:Platform=x64 /t:Build /nr:false
+          msbuild src\cascadia\TerminalConnection\TerminalConnection.vcxproj ^
+            /p:Configuration=Release /p:Platform=x64 /t:Build /nr:false
+          msbuild src\cascadia\TerminalCore\lib\terminalcore-lib.vcxproj ^
+            /p:Configuration=Release /p:Platform=x64 /t:Build /nr:false
+          msbuild src\cascadia\TerminalSettingsModel\Microsoft.Terminal.Settings.ModelLib.vcxproj ^
+            /p:Configuration=Release /p:Platform=x64 /t:Build /nr:false
+          msbuild src\cascadia\TerminalSettingsModel\dll\Microsoft.Terminal.Settings.Model.vcxproj ^
+            /p:Configuration=Release /p:Platform=x64 /t:Build /nr:false
+          msbuild src\cascadia\TerminalControl\dll\TerminalControl.vcxproj ^
+            /p:Configuration=Release /p:Platform=x64 /t:Build /nr:false
+          msbuild src\cascadia\UIHelpers\UIHelpers.vcxproj ^
+            /p:Configuration=Release /p:Platform=x64 /t:Build /nr:false
+          msbuild src\cascadia\UIMarkdown\UIMarkdown.vcxproj ^
+            /p:Configuration=Release /p:Platform=x64 /t:Build /nr:false
+          msbuild src\cascadia\TerminalSettingsEditor\Microsoft.Terminal.Settings.Editor.vcxproj ^
+            /p:Configuration=Release /p:Platform=x64 /t:Build /nr:false
+          msbuild src\cascadia\TerminalSettingsAppAdapterLib\TerminalSettingsAppAdapterLib.vcxproj ^
+            /p:Configuration=Release /p:Platform=x64 /t:Build /nr:false
           msbuild src\cascadia\TerminalApp\TerminalAppLib.vcxproj ^
             /p:BuildProjectReferences=true ^
             /p:RetargetProjects=true ^
